--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,95 @@
-
-Usage:   
-  pip <command> [options]
-
-Commands:
-  install                     Install packages.
-  download                    Download packages.
-  uninstall                   Uninstall packages.
-  freeze                      Output installed packages in requirements format.
-  list                        List installed packages.
-  show                        Show information about installed packages.
-  check                       Verify installed packages have compatible dependencies.
-  config                      Manage local and global configuration.
-  search                      Search PyPI for packages.
-  wheel                       Build wheels from your requirements.
-  hash                        Compute hashes of package archives.
-  completion                  A helper command used for command completion.
-  help                        Show help for commands.
-
-General Options:
-  -h, --help                  Show help.
-  --isolated                  Run pip in an isolated mode, ignoring
-                              environment variables and user configuration.
-  -v, --verbose               Give more output. Option is additive, and can be
-                              used up to 3 times.
-  -V, --version               Show version and exit.
-  -q, --quiet                 Give less output. Option is additive, and can be
-                              used up to 3 times (corresponding to WARNING,
-                              ERROR, and CRITICAL logging levels).
-  --log <path>                Path to a verbose appending log.
-  --proxy <proxy>             Specify a proxy in the form
-                              [user:passwd@]proxy.server:port.
-  --retries <retries>         Maximum number of retries each connection should
-                              attempt (default 5 times).
-  --timeout <sec>             Set the socket timeout (default 15 seconds).
-  --exists-action <action>    Default action when a path already exists:
-                              (s)witch, (i)gnore, (w)ipe, (b)ackup, (a)bort).
-  --trusted-host <hostname>   Mark this host as trusted, even though it does
-                              not have valid or any HTTPS.
-  --cert <path>               Path to alternate CA bundle.
-  --client-cert <path>        Path to SSL client certificate, a single file
-                              containing the private key and the certificate
-                              in PEM format.
-  --cache-dir <dir>           Store the cache data in <dir>.
-  --no-cache-dir              Disable the cache.
-  --disable-pip-version-check
-                              Don't periodically check PyPI to determine
-                              whether a new version of pip is available for
-                              download. Implied with --no-index.
-  --no-color                  Suppress colored output
+astroid==1.6.1
+attrs==17.4.0
+autopep8==1.3.4
+backports.functools-lru-cache==1.5
+BeautifulSoup==3.2.1
+blinker==1.3
+certifi==2018.1.18
+chardet==2.3.0
+Cheetah==2.4.4
+click==6.7
+configglue==1.1.2
+configobj==5.0.6
+configparser==3.5.0
+cryptography==1.2.3
+debtags==2.0
+defer==1.0.6
+dirspec==13.10
+duplicity==0.7.6
+ecdsa==0.13
+enum34==1.1.6
+ez-setup==0.9
+feedparser==5.1.3
+Flask==0.12.2
+Flask-MySQL==1.4.0
+Flask-WTF==0.14.2
+funcsigs==1.0.2
+futures==3.2.0
+httplib2==0.9.1
+idna==2.0
+ipaddr==2.1.11
+ipaddress==1.0.16
+isort==4.3.4
+itsdangerous==0.24
+Jinja2==2.10
+lazy-object-proxy==1.3.1
+libvirt-python==1.3.1
+lockfile==0.12.2
+lxml==3.5.0
+Mako==1.0.3
+MarkupSafe==1.0
+mccabe==0.6.1
+ndg-httpsclient==0.4.4
+nemo-emblems==3.4.1
+netifaces==0.10.4
+oauthlib==1.0.3
+oneconf==0.3.9
+ordereddict==1.1
+PAM==0.4.2
+paramiko==1.16.0
+passlib==1.7.1
+pathlib==1.0.1
+pexpect==4.0.1
+Pillow==3.1.2
+pipenv==11.9.0
+piston-mini-client==0.7.5
+pluggy==0.6.0
+protobuf==2.6.1
+ptyprocess==0.5
+py==1.5.2
+pyasn1==0.1.9
+pyasn1-modules==0.0.7
+pycodestyle==2.3.1
+pycrypto==2.6.1
+pycups==1.9.73
+pycurl==7.43.0
+pygobject==3.20.0
+pyinotify==0.9.6
+PyJWT==1.3.0
+pylint==1.8.2
+PyMySQL==0.8.0
+pyOpenSSL==0.15.1
+pyparted==3.10.7
+pyserial==3.0.1
+pysmbc==1.0.15.5
+pytest==3.4.1
+python-apt==1.1.0b1+ubuntu0.16.4.1
+python-debian==0.1.27
+python-xlib==0.14
+pyxdg==0.25
+reportlab==3.3.0
+requests==2.9.1
+service-identity==16.0.0
+setproctitle==1.1.8
+singledispatch==3.4.0.3
+six==1.10.0
+Twisted==16.0.0
+urllib3==1.13.1
+uTidylib==0.2
+vboxapi==1.0
+virtualenv==15.0.1
+virtualenv-clone==0.3.0
+Werkzeug==0.14.1
+wrapt==1.10.11
+WTForms==2.1
+zope.interface==4.1.3
