--- a/requirements.txt
+++ b/requirements.txt
@@ -1,95 +1,15 @@
-astroid==1.6.1
 attrs==17.4.0
-autopep8==1.3.4
-backports.functools-lru-cache==1.5
-BeautifulSoup==3.2.1
-blinker==1.3
-certifi==2018.1.18
-chardet==2.3.0
-Cheetah==2.4.4
 click==6.7
-configglue==1.1.2
-configobj==5.0.6
-configparser==3.5.0
-cryptography==1.2.3
-debtags==2.0
-defer==1.0.6
-dirspec==13.10
-duplicity==0.7.6
-ecdsa==0.13
-enum34==1.1.6
-ez-setup==0.9
-feedparser==5.1.3
 Flask==0.12.2
-Flask-MySQL==1.4.0
-Flask-WTF==0.14.2
-funcsigs==1.0.2
-futures==3.2.0
-httplib2==0.9.1
-idna==2.0
-ipaddr==2.1.11
-ipaddress==1.0.16
-isort==4.3.4
+Flask-API==1.0
 itsdangerous==0.24
 Jinja2==2.10
-lazy-object-proxy==1.3.1
-libvirt-python==1.3.1
-lockfile==0.12.2
-lxml==3.5.0
-Mako==1.0.3
 MarkupSafe==1.0
-mccabe==0.6.1
-ndg-httpsclient==0.4.4
-nemo-emblems==3.4.1
-netifaces==0.10.4
-oauthlib==1.0.3
-oneconf==0.3.9
-ordereddict==1.1
-PAM==0.4.2
-paramiko==1.16.0
-passlib==1.7.1
-pathlib==1.0.1
-pexpect==4.0.1
-Pillow==3.1.2
-pipenv==11.9.0
-piston-mini-client==0.7.5
+more-itertools==4.1.0
+nose==1.3.7
+pkg-resources==0.0.0
 pluggy==0.6.0
-protobuf==2.6.1
-ptyprocess==0.5
-py==1.5.2
-pyasn1==0.1.9
-pyasn1-modules==0.0.7
-pycodestyle==2.3.1
-pycrypto==2.6.1
-pycups==1.9.73
-pycurl==7.43.0
-pygobject==3.20.0
-pyinotify==0.9.6
-PyJWT==1.3.0
-pylint==1.8.2
-PyMySQL==0.8.0
-pyOpenSSL==0.15.1
-pyparted==3.10.7
-pyserial==3.0.1
-pysmbc==1.0.15.5
-pytest==3.4.1
-python-apt==1.1.0b1+ubuntu0.16.4.1
-python-debian==0.1.27
-python-xlib==0.14
-pyxdg==0.25
-reportlab==3.3.0
-requests==2.9.1
-service-identity==16.0.0
-setproctitle==1.1.8
-singledispatch==3.4.0.3
-six==1.10.0
-Twisted==16.0.0
-urllib3==1.13.1
-uTidylib==0.2
-vboxapi==1.0
-virtualenv==15.0.1
-virtualenv-clone==0.3.0
+py==1.5.3
+pytest==3.5.0
+six==1.11.0
 Werkzeug==0.14.1
-wrapt==1.10.11
-WTForms==2.1
-zope.interface==4.1.3
