--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
 attrs==17.4.0
 click==6.7
+Cython==0.28.2
 Flask==0.12.2
 Flask-API==1.0
+Flask-HTTPAuth==3.2.3
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 more-itertools==4.1.0
 nose==1.3.7
+numpy==1.14.2
 pkg-resources==0.0.0
 pluggy==0.6.0
 py==1.5.3
 pytest==3.5.0
 pytest-flask==0.10.0
 six==1.11.0
+validate-email==1.3
 Werkzeug==0.14.1
